--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,22 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.amtodev.tabs_android">
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_splash"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/ic_splash"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Tabsandroid">
+        android:theme="@style/One"
+        tools:ignore="AllowBackup">
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name=".splash_screen"
+            android:exported="true"
+
+            android:theme="@style/One">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="false"
+            android:label="tabs-android"
+            android:theme="@style/Two">
         </activity>
     </application>
 
